Created Category collection, created ProductService, and refactored code to support addition of category, added category reference to Product